fix logo position on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,6 @@ h6 {
   line-height: 1;
   font-weight: 300;
   letter-spacing: 1px;
-  width: 70px;
   
   font-family: "Poppins", sans-serif;
 }
@@ -207,6 +206,7 @@ h6 {
 
 #header .logo img {
   max-height: 40px;
+  width: 70px !important;
 }
 
 /*--------------------------------------------------------------
